feat: localize CV content and align AI responses

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -61,7 +61,8 @@
     "subtitle": "مسيرتي الأكاديمية والتدريب المهني",
     "completed": "مكتمل",
     "inProgress": "قيد التنفيذ",
-    "estimatedProgress": "التقدم المقدر"
+    "estimatedProgress": "التقدم المقدر",
+    "completionLabel": "????? ???????"
   },
   "certificates": {
     "title": "الشهادات",
@@ -81,7 +82,8 @@
     "downloadPDF": "تحميل PDF",
     "previous": "السابق",
     "next": "التالي",
-    "close": "إغلاق"
+    "close": "إغلاق",
+    "descriptionLabel": "?????"
   },
   "projects": {
     "title": "المشاريع",
@@ -140,7 +142,8 @@
       "ما الشهادات التي يملكها؟"
     ],
     "typing": "يكتب...",
-    "error": "خطأ في الحصول على الرد. يرجى المحاولة مرة أخرى."
+    "error": "خطأ في الحصول على الرد. يرجى المحاولة مرة أخرى.",
+    "suggestedLabel": "????? ??????:"
   },
   "common": {
     "loading": "جاري التحميل...",
@@ -153,5 +156,106 @@
   "metadata": {
     "title": "Vitae.ai | Martin Bundy - AI Digital CV",
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
+  },
+  "qa": {
+    "ask": "??????",
+    "placeholder": "???? ?????...",
+    "suggested": "????? ??????:",
+    "thinking": "???? ???????...",
+    "error": "??? ??? ????? ?????? ??? ???????. ???? ??? ????.",
+    "suggestions": {
+      "skills": [
+        "????? ????? ?????? ?? ?????? ??????????",
+        "?? ???? ????? ?????",
+        "??? ????? ??? ?????????"
+      ],
+      "projects": [
+        "?? ???? ???? ?? ????? Conecta Panam??",
+        "?? ???? ???????? ???? ??????????",
+        "?? ???? ?????? ???? ??????? ?????"
+      ],
+      "experience": [
+        "???? ????? ?? ???????",
+        "?? ???? ????? ???? ???",
+        "?? ??? ????? ???? ???? ????"
+      ],
+      "education": [
+        "????? ???? ???????",
+        "??? ???? ??? ?????? ????????? ???????? ?????????",
+        "?? ?????? ???????????"
+      ]
+    }
+  },
+  "insights": {
+    "title": "????? ?????? ?????? ??????? ?????????",
+    "subtitle": "???? ??? ??? ????? ??? ???? ??????",
+    "generate": "????? ?????",
+    "regenerate": "????? ???????",
+    "careerScore": "???? ?????? ??????",
+    "strengths": "???? ???? ?????",
+    "uniqueValue": "??? ??????",
+    "marketFit": "???????? ?????",
+    "recommendations": "??????",
+    "skillsRadar": "????? ????????",
+    "salaryRange": "???? ?????? ????????",
+    "careerPaths": "?????? ?????",
+    "loading": "???? ????? ????...",
+    "error": "??? ??? ????? ????? ?????. ???? ??? ????.",
+    "scoreNote": {
+      "excellent": "??? ???? ?????",
+      "good": "??????? ??? ????",
+      "improve": "??? ???????"
+    },
+    "salaryPeriod": "???",
+    "radar": {
+      "ai": "?????? ?????????/???? ?????",
+      "programming": "???????",
+      "industrial": "???????",
+      "softSkills": "???????? ???????",
+      "languages": "??????"
+    }
+  },
+  "resumeAnalyzer": {
+    "title": "???? ?????? ???????",
+    "subtitle": "???? ??? ????? ?????? ?????? ??????? ?? ???????? ?????",
+    "analyze": "????? ?????? ???????",
+    "reanalyze": "????? ???????",
+    "loading": "???? ????? ?????? ???????...",
+    "completeness": "?????? ?????? ???????",
+    "atsScore": "????? ATS",
+    "sections": "????? ???????",
+    "gaps": "?????? ???????",
+    "strengths": "???? ?????",
+    "improvements": "??????",
+    "overall": "???? ???",
+    "error": "??? ??? ????? ????? ?????? ???????. ???? ??? ????.",
+    "sectionNames": {
+      "personal": "????????? ???????",
+      "profile": "????? ??????",
+      "education": "???????",
+      "experience": "??????",
+      "skills": "????????",
+      "certificates": "????????",
+      "projects": "????????"
+    }
+  },
+  "skillRecommender": {
+    "title": "???? ????????",
+    "subtitle": "????? ???????? ??????? ?????? ????",
+    "generate": "?????? ??? ??????",
+    "regenerate": "????? ???????",
+    "loading": "???? ????? ????...",
+    "recommended": "???????? ?????? ???",
+    "trends": "??????? ?????",
+    "advice": "????? ?????",
+    "difficulty": "???? ???????",
+    "time": "????? ???????",
+    "resources": "???????",
+    "error": "??? ??? ????? ????? ????????. ???? ??? ????.",
+    "difficultyLabels": {
+      "easy": "???",
+      "medium": "?????",
+      "hard": "???"
+    }
   }
 }
