--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -61,7 +61,8 @@
     "subtitle": "Mein akademischer Werdegang und berufliche Weiterbildung",
     "completed": "Abgeschlossen",
     "inProgress": "In Bearbeitung",
-    "estimatedProgress": "Geschatzter Fortschritt"
+    "estimatedProgress": "Geschatzter Fortschritt",
+    "completionLabel": "Abschluss"
   },
   "certificates": {
     "title": "Zertifikate",
@@ -81,7 +82,8 @@
     "downloadPDF": "PDF herunterladen",
     "previous": "Zuruck",
     "next": "Weiter",
-    "close": "Schliessen"
+    "close": "Schliessen",
+    "descriptionLabel": "Beschreibung"
   },
   "projects": {
     "title": "Projekte",
@@ -140,7 +142,8 @@
       "Welche Zertifikate hat er?"
     ],
     "typing": "Schreibt...",
-    "error": "Fehler beim Abrufen der Antwort. Bitte versuchen Sie es erneut."
+    "error": "Fehler beim Abrufen der Antwort. Bitte versuchen Sie es erneut.",
+    "suggestedLabel": "Vorgeschlagene Fragen:"
   },
   "common": {
     "loading": "Laden...",
@@ -153,5 +156,106 @@
   "metadata": {
     "title": "Vitae.ai | Martin Bundy - Digitaler KI-Lebenslauf",
     "description": "Vitae.ai - Interaktiver KI-gestutzter Lebenslauf von Martin Bundy mit Insights, Empfehlungen und smartem Chat."
+  },
+  "qa": {
+    "ask": "Frag mich",
+    "placeholder": "Gib deine Frage ein...",
+    "suggested": "Vorgeschlagene Fragen:",
+    "thinking": "Denke nach...",
+    "error": "Fehler beim Abrufen der Antwort. Bitte versuche es erneut.",
+    "suggestions": {
+      "skills": [
+        "Warum hast du dich auf KI spezialisiert?",
+        "Was ist deine st?rkste F?higkeit?",
+        "Wie hast du diese Technologien gelernt?"
+      ],
+      "projects": [
+        "Was war die gr??te Herausforderung bei Conecta Panam??",
+        "Welche Technologien hast du am meisten genutzt?",
+        "Hast du weitere KI-Projekte?"
+      ],
+      "experience": [
+        "Was hast du aus deinen Erfahrungen gelernt?",
+        "Was war dein gr??ter beruflicher Erfolg?",
+        "Welche Art von Arbeit suchst du?"
+      ],
+      "education": [
+        "Warum studierst du zwei Studieng?nge?",
+        "Wie kombinierst du KI mit Industrial Engineering?",
+        "Was sind deine akademischen Ziele?"
+      ]
+    }
+  },
+  "insights": {
+    "title": "KI-Karriereanalyse",
+    "subtitle": "Erhalte personalisierte Einblicke in dein berufliches Profil",
+    "generate": "Analyse erstellen",
+    "regenerate": "Neu generieren",
+    "careerScore": "Karriere-Score",
+    "strengths": "Kernst?rken",
+    "uniqueValue": "Wertversprechen",
+    "marketFit": "Marktfit",
+    "recommendations": "Empfehlungen",
+    "skillsRadar": "Kompetenzradar",
+    "salaryRange": "Gesch?tzte Gehaltsspanne",
+    "careerPaths": "Karrierewege",
+    "loading": "Profil wird analysiert...",
+    "error": "Fehler beim Erstellen der Insights. Bitte versuche es erneut.",
+    "scoreNote": {
+      "excellent": "Ausgezeichnetes berufliches Profil",
+      "good": "Gutes Wachstumspotenzial",
+      "improve": "Verbesserungspotenzial"
+    },
+    "salaryPeriod": "Jahr",
+    "radar": {
+      "ai": "KI/ML",
+      "programming": "Programmierung",
+      "industrial": "Industrie",
+      "softSkills": "Soft Skills",
+      "languages": "Sprachen"
+    }
+  },
+  "resumeAnalyzer": {
+    "title": "Lebenslauf-Analyzer",
+    "subtitle": "Erhalte eine detaillierte Analyse deines Lebenslaufs mit Verbesserungsvorschl?gen",
+    "analyze": "Lebenslauf analysieren",
+    "reanalyze": "Erneut analysieren",
+    "loading": "Lebenslauf wird analysiert...",
+    "completeness": "Vollst?ndigkeit des Lebenslaufs",
+    "atsScore": "ATS-Kompatibilit?t",
+    "sections": "Abschnittsanalyse",
+    "gaps": "Verbesserungsbereiche",
+    "strengths": "St?rken",
+    "improvements": "Empfehlungen",
+    "overall": "Gesamtfazit",
+    "error": "Fehler beim Analysieren des Lebenslaufs. Bitte versuche es erneut.",
+    "sectionNames": {
+      "personal": "Pers?nliche Infos",
+      "profile": "Profil",
+      "education": "Ausbildung",
+      "experience": "Erfahrung",
+      "skills": "F?higkeiten",
+      "certificates": "Zertifikate",
+      "projects": "Projekte"
+    }
+  },
+  "skillRecommender": {
+    "title": "Kompetenz-Empfehlungen",
+    "subtitle": "Entdecke erg?nzende F?higkeiten, um dein Profil zu st?rken",
+    "generate": "Empfehlungen abrufen",
+    "regenerate": "Neu generieren",
+    "loading": "Profil wird analysiert...",
+    "recommended": "Empfohlene F?higkeiten",
+    "trends": "Markttrends",
+    "advice": "Karriere-Rat",
+    "difficulty": "Schwierigkeit",
+    "time": "Gesch?tzte Zeit",
+    "resources": "Ressourcen",
+    "error": "Fehler beim Generieren der Empfehlungen. Bitte versuche es erneut.",
+    "difficultyLabels": {
+      "easy": "Einfach",
+      "medium": "Mittel",
+      "hard": "Schwierig"
+    }
   }
 }
