--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -61,7 +61,8 @@
     "subtitle": "मेरी शैक्षणिक यात्रा और व्यावसायिक प्रशिक्षण",
     "completed": "पूर्ण",
     "inProgress": "जारी",
-    "estimatedProgress": "अनुमानित प्रगति"
+    "estimatedProgress": "अनुमानित प्रगति",
+    "completionLabel": "?????"
   },
   "certificates": {
     "title": "प्रमाणपत्र",
@@ -81,7 +82,8 @@
     "downloadPDF": "PDF डाउनलोड करें",
     "previous": "पिछला",
     "next": "अगला",
-    "close": "बंद करें"
+    "close": "बंद करें",
+    "descriptionLabel": "?????"
   },
   "projects": {
     "title": "प्रोजेक्ट्स",
@@ -140,7 +142,8 @@
       "उनके पास कौन से प्रमाणपत्र हैं?"
     ],
     "typing": "टाइप कर रहे हैं...",
-    "error": "प्रतिक्रिया प्राप्त करने में त्रुटि। कृपया पुनः प्रयास करें।"
+    "error": "प्रतिक्रिया प्राप्त करने में त्रुटि। कृपया पुनः प्रयास करें।",
+    "suggestedLabel": "????? ?? ??????:"
   },
   "common": {
     "loading": "लोड हो रहा है...",
@@ -153,5 +156,106 @@
   "metadata": {
     "title": "Vitae.ai | Martin Bundy - AI Digital CV",
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
+  },
+  "qa": {
+    "ask": "?????",
+    "placeholder": "???? ?????? ?????...",
+    "suggested": "????? ?? ??????:",
+    "thinking": "??? ??? ???...",
+    "error": "????? ??????? ???? ??? ?????? ???? ??? ?? ?????? ?????",
+    "suggestions": {
+      "skills": [
+        "???? AI ??? ?????????? ????? ?????",
+        "???? ???? ????? ???? ???? ???",
+        "???? ?? ??????? ???? ??????"
+      ],
+      "projects": [
+        "Conecta Panam? ?? ???? ???? ?????? ???? ???",
+        "???? ???? ??????? ??? ?? ??????? ????? ????",
+        "???? ???? ??? ?? AI ????????? ????"
+      ],
+      "experience": [
+        "???? ???? ??????? ?? ???? ?????",
+        "???? ???? ???? ?????? ??????? ???? ????",
+        "?? ??? ?????? ?? ??? ?? ???? ??? ????"
+      ],
+      "education": [
+        "?? ?? ????????? ????? ??? ??? ????",
+        "?? AI ?? ??????????? ??????????? ?? ??? ???? ?????? ????",
+        "???? ??????? ?????? ???? ????"
+      ]
+    }
+  },
+  "insights": {
+    "title": "AI ????? ????????",
+    "subtitle": "???? ?????? ????????? ?? ????????? ??????????? ??????? ????",
+    "generate": "???????? ?????",
+    "regenerate": "???? ?????",
+    "careerScore": "????? ?????",
+    "strengths": "????? ??????",
+    "uniqueValue": "????? ????????",
+    "marketFit": "?????? ????????",
+    "recommendations": "??????????",
+    "skillsRadar": "???? ????",
+    "salaryRange": "???????? ???? ????",
+    "careerPaths": "????? ??",
+    "loading": "???? ????????? ????????? ?? ??? ??...",
+    "error": "??????????? ????? ??? ?????? ???? ??? ?? ?????? ?????",
+    "scoreNote": {
+      "excellent": "???????? ?????? ?????????",
+      "good": "????? ?????? ??????",
+      "improve": "????? ?? ????"
+    },
+    "salaryPeriod": "????",
+    "radar": {
+      "ai": "AI/ML",
+      "programming": "????????????",
+      "industrial": "???????????",
+      "softSkills": "????? ???????",
+      "languages": "??????"
+    }
+  },
+  "resumeAnalyzer": {
+    "title": "????????? ????????",
+    "subtitle": "????? ??????? ?? ??? ???? ????????? ?? ??????? ???????? ??????? ????",
+    "analyze": "????????? ????????? ????",
+    "reanalyze": "???? ????????? ????",
+    "loading": "????????? ?? ???????? ?? ??? ??...",
+    "completeness": "????????? ?? ???????",
+    "atsScore": "ATS ??????",
+    "sections": "??? ????????",
+    "gaps": "????? ?? ???????",
+    "strengths": "??????",
+    "improvements": "??????????",
+    "overall": "??? ??????",
+    "error": "????????? ???????? ??? ?????? ???? ??? ?? ?????? ?????",
+    "sectionNames": {
+      "personal": "????????? ???????",
+      "profile": "?????????",
+      "education": "??????",
+      "experience": "?????",
+      "skills": "????",
+      "certificates": "??????????",
+      "projects": "???????????"
+    }
+  },
+  "skillRecommender": {
+    "title": "???? ?????",
+    "subtitle": "???? ????????? ?? ????? ???? ?? ??? ???? ???? ?????",
+    "generate": "????? ??????? ????",
+    "regenerate": "???? ??????? ????",
+    "loading": "???? ????????? ????????? ?? ??? ??...",
+    "recommended": "????? ?? ????",
+    "trends": "?????? ?????",
+    "advice": "????? ????",
+    "difficulty": "??????",
+    "time": "???????? ???",
+    "resources": "??????",
+    "error": "????? ????? ??? ?????? ???? ??? ?? ?????? ?????",
+    "difficultyLabels": {
+      "easy": "????",
+      "medium": "?????",
+      "hard": "????"
+    }
   }
 }
