--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -61,7 +61,8 @@
     "subtitle": "学術的経歴と専門訓練",
     "completed": "修了",
     "inProgress": "在学中",
-    "estimatedProgress": "推定進捗"
+    "estimatedProgress": "推定進捗",
+    "completionLabel": "????"
   },
   "certificates": {
     "title": "資格・認定",
@@ -81,7 +82,8 @@
     "downloadPDF": "PDFをダウンロード",
     "previous": "前へ",
     "next": "次へ",
-    "close": "閉じる"
+    "close": "閉じる",
+    "descriptionLabel": "??"
   },
   "projects": {
     "title": "プロジェクト",
@@ -140,7 +142,8 @@
       "どんな資格を持っていますか？"
     ],
     "typing": "入力中...",
-    "error": "回答の取得中にエラーが発生しました。もう一度お試しください。"
+    "error": "回答の取得中にエラーが発生しました。もう一度お試しください。",
+    "suggestedLabel": "????????"
   },
   "common": {
     "loading": "読み込み中...",
@@ -153,5 +156,106 @@
   "metadata": {
     "title": "Vitae.ai | Martin Bundy - AI Digital CV",
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
+  },
+  "qa": {
+    "ask": "????",
+    "placeholder": "?????...",
+    "suggested": "????????",
+    "thinking": "???...",
+    "error": "??????????????????????????????",
+    "suggestions": {
+      "skills": [
+        "??AI??????????",
+        "??????????????",
+        "???????????????????"
+      ],
+      "projects": [
+        "Conecta Panam?????????",
+        "??????????",
+        "???AI?????????????"
+      ],
+      "experience": [
+        "?????????????",
+        "??????????",
+        "????????????????"
+      ],
+      "education": [
+        "??2???????????????",
+        "AI???????????????????",
+        "????????????"
+      ]
+    }
+  },
+  "insights": {
+    "title": "AI??????",
+    "subtitle": "????????????????????????????",
+    "generate": "?????",
+    "regenerate": "???",
+    "careerScore": "???????",
+    "strengths": "????",
+    "uniqueValue": "????",
+    "marketFit": "????",
+    "recommendations": "????",
+    "skillsRadar": "???????",
+    "salaryRange": "??????",
+    "careerPaths": "??????",
+    "loading": "??????????...",
+    "error": "??????????????????????????????",
+    "scoreNote": {
+      "excellent": "???????????",
+      "good": "?????????",
+      "improve": "???????"
+    },
+    "salaryPeriod": "?",
+    "radar": {
+      "ai": "AI/ML",
+      "programming": "???????",
+      "industrial": "????",
+      "softSkills": "??????",
+      "languages": "??"
+    }
+  },
+  "resumeAnalyzer": {
+    "title": "?????",
+    "subtitle": "??????????????????",
+    "analyze": "??????",
+    "reanalyze": "???",
+    "loading": "???????...",
+    "completeness": "???????",
+    "atsScore": "ATS???",
+    "sections": "???????",
+    "gaps": "???",
+    "strengths": "??",
+    "improvements": "????",
+    "overall": "?????",
+    "error": "???????????????????????????????",
+    "sectionNames": {
+      "personal": "????",
+      "profile": "??????",
+      "education": "??",
+      "experience": "??",
+      "skills": "???",
+      "certificates": "????",
+      "projects": "??????"
+    }
+  },
+  "skillRecommender": {
+    "title": "?????",
+    "subtitle": "????????????????????",
+    "generate": "?????",
+    "regenerate": "???",
+    "loading": "??????????...",
+    "recommended": "?????",
+    "trends": "??????",
+    "advice": "?????????",
+    "difficulty": "???",
+    "time": "????",
+    "resources": "????",
+    "error": "??????????????????????????????",
+    "difficultyLabels": {
+      "easy": "??",
+      "medium": "??",
+      "hard": "???"
+    }
   }
 }
