--- a/src/i18n/locales/ko.json
+++ b/src/i18n/locales/ko.json
@@ -61,7 +61,8 @@
     "subtitle": "학업 이력 및 전문 교육",
     "completed": "수료",
     "inProgress": "진행 중",
-    "estimatedProgress": "예상 진행률"
+    "estimatedProgress": "예상 진행률",
+    "completionLabel": "?? ??"
   },
   "certificates": {
     "title": "자격증",
@@ -81,7 +82,8 @@
     "downloadPDF": "PDF 다운로드",
     "previous": "이전",
     "next": "다음",
-    "close": "닫기"
+    "close": "닫기",
+    "descriptionLabel": "??"
   },
   "projects": {
     "title": "프로젝트",
@@ -140,7 +142,8 @@
       "어떤 자격증이 있나요?"
     ],
     "typing": "입력 중...",
-    "error": "응답을 가져오는 중 오류가 발생했습니다. 다시 시도해주세요."
+    "error": "응답을 가져오는 중 오류가 발생했습니다. 다시 시도해주세요.",
+    "suggestedLabel": "?? ??:"
   },
   "common": {
     "loading": "로딩 중...",
@@ -153,5 +156,106 @@
   "metadata": {
     "title": "Vitae.ai | Martin Bundy - AI Digital CV",
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
+  },
+  "qa": {
+    "ask": "????",
+    "placeholder": "??? ?????...",
+    "suggested": "?? ??:",
+    "thinking": "?? ?...",
+    "error": "??? ???? ? ??? ??????. ?? ?????.",
+    "suggestions": {
+      "skills": [
+        "? AI? ????? ????",
+        "?? ?? ??? ??????",
+        "? ???? ??? ?????"
+      ],
+      "projects": [
+        "Conecta Panam?? ?? ? ??? ???????",
+        "?? ?? ??? ??? ??????",
+        "?? AI ????? ????"
+      ],
+      "experience": [
+        "??? ?? ??? ?????",
+        "?? ? ??? ??? ??????",
+        "?? ?? ?? ????"
+      ],
+      "education": [
+        "? ? ?? ??? ??????",
+        "AI? ????? ??? ??????",
+        "?? ??? ??????"
+      ]
+    }
+  },
+  "insights": {
+    "title": "AI ??? ??",
+    "subtitle": "?? ???? ?? ?? ????? ?????",
+    "generate": "?? ??",
+    "regenerate": "?? ??",
+    "careerScore": "??? ??",
+    "strengths": "?? ??",
+    "uniqueValue": "?? ??",
+    "marketFit": "?? ???",
+    "recommendations": "??",
+    "skillsRadar": "?? ???",
+    "salaryRange": "?? ?? ??",
+    "careerPaths": "??? ??",
+    "loading": "???? ?? ?...",
+    "error": "???? ?? ? ??? ??????. ?? ?????.",
+    "scoreNote": {
+      "excellent": "??? ?? ???",
+      "good": "?? ??? ??",
+      "improve": "?? ?? ??"
+    },
+    "salaryPeriod": "?",
+    "radar": {
+      "ai": "AI/ML",
+      "programming": "?????",
+      "industrial": "??",
+      "softSkills": "??? ??",
+      "languages": "??"
+    }
+  },
+  "resumeAnalyzer": {
+    "title": "??? ??",
+    "subtitle": "?? ??? ??? ?? ??? ??",
+    "analyze": "??? ??",
+    "reanalyze": "???",
+    "loading": "???? ?? ?...",
+    "completeness": "??? ???",
+    "atsScore": "ATS ???",
+    "sections": "?? ??",
+    "gaps": "?? ??",
+    "strengths": "??",
+    "improvements": "?? ??",
+    "overall": "?? ??",
+    "error": "??? ?? ? ??? ??????. ?? ?????.",
+    "sectionNames": {
+      "personal": "?? ??",
+      "profile": "???",
+      "education": "??",
+      "experience": "??",
+      "skills": "??",
+      "certificates": "???",
+      "projects": "????"
+    }
+  },
+  "skillRecommender": {
+    "title": "?? ??",
+    "subtitle": "???? ??? ?? ??? ?????",
+    "generate": "?? ??",
+    "regenerate": "?? ??",
+    "loading": "???? ?? ?...",
+    "recommended": "?? ??",
+    "trends": "?? ???",
+    "advice": "??? ??",
+    "difficulty": "???",
+    "time": "?? ??",
+    "resources": "???",
+    "error": "?? ?? ? ??? ??????. ?? ?????.",
+    "difficultyLabels": {
+      "easy": "??",
+      "medium": "??",
+      "hard": "???"
+    }
   }
 }
