--- a/src/i18n/locales/zh.json
+++ b/src/i18n/locales/zh.json
@@ -61,7 +61,8 @@
     "subtitle": "我的学术经历和专业培训",
     "completed": "已完成",
     "inProgress": "进行中",
-    "estimatedProgress": "预计进度"
+    "estimatedProgress": "预计进度",
+    "completionLabel": "????"
   },
   "certificates": {
     "title": "证书",
@@ -81,7 +82,8 @@
     "downloadPDF": "下载PDF",
     "previous": "上一个",
     "next": "下一个",
-    "close": "关闭"
+    "close": "关闭",
+    "descriptionLabel": "??"
   },
   "projects": {
     "title": "项目",
@@ -140,7 +142,8 @@
       "他有哪些证书？"
     ],
     "typing": "正在输入...",
-    "error": "获取回复时出错。请重试。"
+    "error": "获取回复时出错。请重试。",
+    "suggestedLabel": "?????"
   },
   "common": {
     "loading": "加载中...",
@@ -153,5 +156,106 @@
   "metadata": {
     "title": "Vitae.ai | Martin Bundy - AI Digital CV",
     "description": "Vitae.ai - AI-powered interactive CV for Martin Bundy with insights, recommendations, and smart chat."
+  },
+  "qa": {
+    "ask": "??",
+    "placeholder": "??????...",
+    "suggested": "?????",
+    "thinking": "???...",
+    "error": "??????????????",
+    "suggestions": {
+      "skills": [
+        "??????? AI?",
+        "??????????",
+        "????????????"
+      ],
+      "projects": [
+        "Conecta Panam? ?????????",
+        "???????????",
+        "????? AI ????"
+      ],
+      "experience": [
+        "?????????????",
+        "????????????",
+        "????????????"
+      ],
+      "education": [
+        "????????????",
+        "???? AI ????????",
+        "??????????"
+      ]
+    }
+  },
+  "insights": {
+    "title": "AI ????",
+    "subtitle": "???????????????",
+    "generate": "????",
+    "regenerate": "????",
+    "careerScore": "????",
+    "strengths": "????",
+    "uniqueValue": "????",
+    "marketFit": "?????",
+    "recommendations": "??",
+    "skillsRadar": "????",
+    "salaryRange": "??????",
+    "careerPaths": "????",
+    "loading": "????????...",
+    "error": "??????????????",
+    "scoreNote": {
+      "excellent": "??????",
+      "good": "??????",
+      "improve": "?????"
+    },
+    "salaryPeriod": "?",
+    "radar": {
+      "ai": "AI/ML",
+      "programming": "??",
+      "industrial": "????",
+      "softSkills": "???",
+      "languages": "??"
+    }
+  },
+  "resumeAnalyzer": {
+    "title": "????",
+    "subtitle": "??????????????",
+    "analyze": "????",
+    "reanalyze": "????",
+    "loading": "??????...",
+    "completeness": "?????",
+    "atsScore": "ATS ???",
+    "sections": "????",
+    "gaps": "????",
+    "strengths": "??",
+    "improvements": "????",
+    "overall": "????",
+    "error": "?????????????",
+    "sectionNames": {
+      "personal": "????",
+      "profile": "????",
+      "education": "??",
+      "experience": "??",
+      "skills": "??",
+      "certificates": "??",
+      "projects": "??"
+    }
+  },
+  "skillRecommender": {
+    "title": "????",
+    "subtitle": "?????????????",
+    "generate": "????",
+    "regenerate": "????",
+    "loading": "????????...",
+    "recommended": "????",
+    "trends": "????",
+    "advice": "????",
+    "difficulty": "??",
+    "time": "????",
+    "resources": "??",
+    "error": "??????????????",
+    "difficultyLabels": {
+      "easy": "??",
+      "medium": "??",
+      "hard": "??"
+    }
   }
 }
